apps/openwrt/endpointslice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: homelab
  namespace: homelab
  labels:
    kubernetes.io/service-name: homelab
addressType: IPv4
endpoints:
  - addresses:
      - 10.0.0.1
    conditions:
      ready: true
ports:
  - name: openwrt
    port: 80
    protocol: TCP
  - name: adguard-home
    port: 3000
    protocol: TCP
