apps/openwrt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openwrt-ingress
  namespace: homelab
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - route.realtong.cn
  rules:
    - host: route.realtong.cn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homelab
                port:
                  number: 80
